# project_code

./: CMakeLists.txt  faculty.c  faculty.h  fees.c  fees.h  fileoperation.c  fileoperation.h  main1.c  section.c  section.h  student.c  student.h
